# termgpt

./: .gitignore  README.md  TODO.md  VISION.md  pyproject.toml  snake.py  termgpt.py
tests/test_plugins/: test_plugin_manager.py
tgpt/: agent.py  cli.py  gpt.py  prompts.py  session_manager.py
tgpt/plugins/: example_plugin.py  plugin_manager.py  web_plugin.py
tgpt/prompts/: system_prompt.txt
