[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgpt"
version = "0.1.0"
description = "Command-line tool to convert natural language into Bash commands"
authors = [{ name = "Sukuru Sai Vineet", email = "saivineet89@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["natural-language", "bash", "cli", "ai", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "openai",
    "requests"
]

[project.scripts]
tgpt = "tgpt.cli:main"

